@@ -1630,7 +1630,7 @@ public class AddeImageDataSelection {
          */
         public double getLatitude() {
             double val = latLonWidget.getLat();
-            //        Double dbl = new Double(val);
+            //        Double dbl = Double.valueOf(val);
             if (Double.isNaN(val)) {
                 val = defaultLat;
             }
@@ -1679,7 +1679,7 @@ public class AddeImageDataSelection {
          */
         public double getLongitude() {
             double val = latLonWidget.getLon();
-            //        Double dbl = new Double(val);
+            //        Double dbl = Double.valueOf(val);
             if (Double.isNaN(val)) {
                 val = defaultLon;
             }
