@@ -623,14 +623,14 @@ public class HovmollerControl extends GridDisplayControl {
                     majorTickSpacing = (time - start);
                 }
                 DateTime dt = new DateTime(r);
-                timeLabels.put(new Double(time),
+                timeLabels.put(Double.valueOf(time),
                                dt.formattedString(format,
                                    DateTime.getFormatTimeZone()));
             }
             // do this so we get the last one
             if (k - step < numSteps - step / 2) {
                 DateTime dt = new DateTime(endTime);
-                timeLabels.put(new Double(end),
+                timeLabels.put(Double.valueOf(end),
                                dt.formattedString(format,
                                    DateTime.getFormatTimeZone()));
             }
@@ -719,7 +719,7 @@ public class HovmollerControl extends GridDisplayControl {
 
         for (int k = 0; k < hilo.length; k++) {
             double val = hilo[k];
-            xLabels.put(new Double(val),
+            xLabels.put(Double.valueOf(val),
                         dc.formatLatLonCardinal(val, 1 - averageDim));
         }
         Font f    = hovmollerView.getDisplayListFont();
